add domain,dapper projects

--- a/UniInfo.Web/Views/Home/Index.cshtml
+++ b/UniInfo.Web/Views/Home/Index.cshtml
@@ -18,7 +18,7 @@
                     <img src="~/images/futuristicsearch.jpg" class="img-fluid">
                     <div class="text">Поиск вуза по критериям</div>
                     <p class="img-dif fade-animation">Найдите для себя вуз по предметам,языку и по форме обучения</p>
-                    <a class="btn btn-about fade-animation" asp-action="Index" asp-controller="Equipment">
+                    <a class="btn btn-about fade-animation" asp-action="Index" asp-controller="UniversityFilter">
                         Подробнее
                     </a>
                 </div>            
@@ -29,7 +29,7 @@
                     <img src="~/images/futuristiclist.jpg" class="img-fluid">
                     <div class="text">Список Вузов</div>
                     <p class="img-dif fade-animation">Список всех университетов и их факультетов </p>
-                    <a class="btn btn-about fade-animation" asp-action="Index" asp-controller="Technology">
+                    <a class="btn btn-about fade-animation" asp-action="Index" asp-controller="UniversityList">
                         Подробнее
                     </a>
                 </div>
