--- a/UniInfo.Web/Views/Shared/_Layout.cshtml
+++ b/UniInfo.Web/Views/Shared/_Layout.cshtml
@@ -26,10 +26,10 @@
                                 <a class="nav-link" asp-action="Index" asp-controller="Home">Главная</a>
                             </li>
                             <li class="nav-item nav-line">
-                                <a class="nav-link" asp-action="Index" asp-controller="Technology">Выбор ВУЗА</a>
+                                <a class="nav-link" asp-action="Index" asp-controller="UniversityFilter">Выбор ВУЗА</a>
                             </li>
                             <li class="nav-item nav-line">
-                                <a class="nav-link" asp-action="Index" asp-controller="Equipment">Список Вузов</a>
+                                <a class="nav-link" asp-action="Index" asp-controller="UniversityList">Список Вузов</a>
                             </li>
                         </ul>
                     </div>
