--- a/UniInfo.Web/Views/UniversityFilter/Index.cshtml
+++ b/UniInfo.Web/Views/UniversityFilter/Index.cshtml
@@ -1,4 +1,11 @@
-﻿@section scripts {
+﻿<style>
+    .body-bg {
+        background: -webkit-linear-gradient(50deg, #09203f,#485563);
+    }
+</style>
+
+@section scripts {
+
         <script src="runtime.js"></script>
         <script src="polyfills.js"></script>
         <script src="styles.js"></script>
