--- a/UniInfo.Web/wwwroot/css/site.css
+++ b/UniInfo.Web/wwwroot/css/site.css
@@ -3,7 +3,9 @@
     color: white;
     margin: 0;
     font-size: 14px;
+    
 }
+
 
 /*HEDER*/
 
@@ -51,13 +53,12 @@
     /*FOOTER*/
 
 .footer {
-    position:absolute;
     bottom: 0;
     width: 100%;
-    height: 60px;
     line-height: 60px;
     background-color: #03132b;
-    color:white;
+    color: white;
+    margin-top: 40px
 }
 
 #footer-element-container a{
