universitylist  page major changes

--- a/UniInfo.Web/Views/UniversityList/Index.cshtml
+++ b/UniInfo.Web/Views/UniversityList/Index.cshtml
@@ -1,7 +1,9 @@
 ﻿
-@{
-    ViewData["Title"] = "Index";
-}
+@section scripts {
 
-<h1>Index</h1>
-
+    <script src="runtime.js"></script>
+    <script src="polyfills.js"></script>
+    <script src="styles.js"></script>
+    <script src="vendor.js"></script>
+    <script src="main.js"></script> }
+<app-root></app-root>
