base single university

--- a/ClientApp/src/app/components/universityList/tableBuilder.component.html
+++ b/ClientApp/src/app/components/universityList/tableBuilder.component.html
@@ -4,7 +4,7 @@
   <div class="table100">
     <div *ngFor="let d of dict | keyvalue">
       <p class="text-center u-name-container">
-        <a class="u-name" href="/University/{{d.key}}">{{d.value[0].universityNameRu}} </a>
+        <a class="u-name" href="UniversityList/University/{{d.key}}">{{d.value[0].universityNameRu}} </a>
       </p>
       
       <table class="">
