--- a/ClientApp/src/app/components/singleUniversity/singleUniversity.component.html
+++ b/ClientApp/src/app/components/singleUniversity/singleUniversity.component.html
@@ -23,10 +23,7 @@
     width: 100%;
   }
 
-  .number {
-    font-family: 'Chakra Petch', sans-serif;
-  }
-
+ 
   .web-page-p {
     cursor: pointer;
     font-size: 16px;
@@ -95,7 +92,7 @@
     </div>
   </div>
   <div class="container mt-5">
-    <div class="d-flex flex-row justify-content-md-center uk-flex-space-between" id="containerOptions">
+    <div class="d-flex flex-row justify-content-md-center uk-flex-space-between flex-wrap" id="containerOptions">
 
       <div class="container-edu">
         <div [className]="isThisEducationType(e.code) ? 'btn-parallelogram parallelogram btn btn-info color-black':'item-btn btn-parallelogram parallelogram item-btn-sub'" *ngFor="let e of eduTypes" (click)="selectEducationType(e)">
@@ -119,9 +116,9 @@
 
 
     </div>
-    <div id="con">
+    <div id="con" class="mt-5" *ngIf="faculties?.length>0;else nofaculty">
       <div class="table100">
-        <table>
+        <table class="exo2">
           <thead>
             <tr class="table100-head">
               <th>{{'N'}}</th>
@@ -132,35 +129,47 @@
               <th>{{tableHeader.accept}}</th>
             </tr>
           </thead>
-          <tbody>
-            <tr *ngFor="let fac of faculties;let i=index">
-              <td>{{i+1}}</td>
-              <td>{{fac.code}}</td>
-              <td style="text-align:left">{{fac.facultyNameRu}}</td>
-              <td>
-                <span>
-                  {{fac.grant}} /
-                </span>
-                <span>
-                  {{fac.contract}}
-                </span>
-              </td>
-              <td>
-                <span>
-                  {{fac.grantPass}} /
-                </span>
-                <span>
-                  {{fac.contractPass}}
-                </span>
-              </td>
+          <tbody >
+            <ng-container  *ngFor="let fac of faculties;let i=index">
+              <tr>
+                <td  colspan="6" id="subj-td" class="extra-info">Предметы: {{createSubject(fac.subject)}}</td>
+              </tr>
+              <tr>
+                <td>{{i+1}}</td>
+                <td>{{fac.code}}</td>
+                <td style="text-align:left">{{fac.facultyNameRu}}</td>
+                <td class="number">
+                  <span>
+                    {{fac.grant}} /
+                  </span>
+                  <span>
+                    {{fac.contract}}
+                  </span>
+                </td>
+                <td class="number">
+                  <span>
+                    {{fac.grantPass}} /
+                  </span>
+                  <span>
+                    {{fac.contractPass}}
+                  </span>
+                </td>
 
-              <td>{{fac.asFirst}}/{{fac.asSecond}}/{{fac.asThird}}</td>
-            </tr>
+                <td class="number">{{fac.asFirst}}/{{fac.asSecond}}/{{fac.asThird}}</td>
+              </tr>
+            </ng-container>
+
           </tbody>
 
         </table>
       </div>
     </div>
 
+   
+
   </div>
 </div>
+
+<ng-template #nofaculty>
+  <h1 class="mt-4 text-center" style="color:cyan">Данные отсутствуют</h1>
+</ng-template>
