--- a/ClientApp/src/app/components/singleUniversity/singleUniversity.component.html
+++ b/ClientApp/src/app/components/singleUniversity/singleUniversity.component.html
@@ -49,8 +49,8 @@
   }
 </style>
 
-
-<div>
+<!-- ru -->
+<div *ngIf="currentLanguage=='ru';else uzDiv">
   <div class="mt-5">
     <div class="img-bg">
 
@@ -117,7 +117,7 @@
 
 
     </div>
-    <div id="con" class="mt-5" *ngIf="faculties?.length>0;else nofaculty">
+    <div id="con" class="mt-5" *ngIf="faculties?.length>0;else nofacultyRu">
       <div class="table100">
         <table class="exo2">
           <thead>
@@ -125,8 +125,8 @@
               <th>{{'N'}}</th>
               <th>{{tableHeader.code}}</th>
               <th>{{tableHeader.direction}}</th>
-              <th>{{tableHeader.plan}} (г/к)</th>
-              <th>{{tableHeader.pass}} (г/к)</th>
+              <th>{{tableHeader.plan}}</th>
+              <th>{{tableHeader.pass}}</th>
               <th>{{tableHeader.accept}}</th>
             </tr>
           </thead>
@@ -170,7 +170,132 @@
 
   </div>
 </div>
+<!-- end ru -->
+<!-- uz -->
+<ng-template #uzDiv>
+  <div class="mt-5">
+    <div class="img-bg">
 
-<ng-template #nofaculty>
+      <div class="img-content">
+        <section class="img-text-content number">
+          <h3>{{university?.nameUz}}</h3>
+
+          <div class="container">
+            <div class="d-flex flex-column">
+              <div [className]="university?.phone ? 'd-flex' : 'd-none' ">
+                <p>
+                  <i class="fa fa-phone"></i>
+                  {{university?.phone}}
+                </p>
+              </div>
+              <div [className]="university?.faks ? 'd-flex' : 'd-none' ">
+                <p>
+                  <i class="fa fa-fax"></i>
+                  {{university?.faks}}
+                </p>
+              </div>
+              <div [className]="university?.webPage ? 'd-flex' : 'd-none' ">
+                <p class="web-page-p">
+                  <a class="fa fa-globe" href="{{university?.webPage}}" target="_blank">
+                    {{removeHttpUrl(university?.webPage)}}
+                  </a>
+                </p>
+              </div>
+              <div [className]="(university?.universityIndex && university?.address) ? 'd-flex' : 'd-none' ">
+                <p>
+                  <i class="fa fa-map-marker"></i>
+                  {{university?.universityIndex}} {{university?.address}}
+                </p>
+              </div>
+            </div>
+          </div>
+        </section>
+
+      </div>
+    </div>
+  </div>
+  <div class="container mt-5">
+    <div class="d-flex flex-row justify-content-md-center uk-flex-space-between flex-wrap" id="containerOptions">
+
+      <div class="container-edu">
+        <div [className]="isThisEducationType(e.code) ? 'btn-parallelogram parallelogram btn btn-info color-black':'item-btn btn-parallelogram parallelogram item-btn-sub'" *ngFor="let e of eduTypes" (click)="selectEducationType(e)">
+          {{e.uzVersion}}
+        </div>
+
+      </div>
+
+
+      <div class="container-lang">
+        <div [className]="isThisLanguage(l.code) ? 'btn-parallelogram parallelogram btn btn-info color-black':'item-btn btn-parallelogram parallelogram item-btn-sub'" *ngFor="let l of languages" (click)="selectLanguage(l)">
+          {{l.uzVersion}}
+        </div>
+      </div>
+
+      <div class="container-year">
+        <div class="btn-parallelogram parallelogram item-btn item-btn-sub number">
+          2019-2020
+        </div>
+      </div>
+
+
+    </div>
+    <div id="con" class="mt-5" *ngIf="faculties?.length>0;else nofacultyUz">
+      <div class="table100">
+        <table class="exo2">
+          <thead>
+            <tr class="table100-head">
+              <th>{{'N'}}</th>
+              <th>{{tableHeader.code}}</th>
+              <th>{{tableHeader.direction}}</th>
+              <th>{{tableHeader.plan}}</th>
+              <th>{{tableHeader.pass}}</th>
+              <th>{{tableHeader.accept}}</th>
+            </tr>
+          </thead>
+          <tbody>
+            <ng-container *ngFor="let fac of faculties;let i=index">
+              <tr> 
+                <td colspan="6" id="subj-td" class="extra-info">Fanlar: {{createSubject(fac.subject)}}</td>
+              </tr>
+              <tr>
+                <td>{{i+1}}</td>
+                <td>{{fac.code}}</td>
+                <td style="text-align:left">{{fac.facultyNameUz}}</td>
+                <td class="number">
+                  <span>
+                    {{fac.grant}} /
+                  </span>
+                  <span>
+                    {{fac.contract}}
+                  </span>
+                </td>
+                <td class="number">
+                  <span>
+                    {{fac.grantPass}} /
+                  </span>
+                  <span>
+                    {{fac.contractPass}}
+                  </span>
+                </td>
+
+                <td class="number">{{fac.asFirst}}/{{fac.asSecond}}/{{fac.asThird}}</td>
+              </tr>
+            </ng-container>
+
+          </tbody>
+
+        </table>
+      </div>
+    </div>
+
+  </div>
+</ng-template>
+<ng-template #nofacultyRu>
   <h1 class="mt-4 text-center" style="color:cyan">Данные отсутствуют</h1>
 </ng-template>
+
+<ng-template #nofacultyUz>
+  <h1 class="mt-4 text-center" style="color:cyan">Ma'lumot yo'q</h1>
+</ng-template>
+
+
