--- a/UniInfo.Web/Views/_ViewImports.cshtml
+++ b/UniInfo.Web/Views/_ViewImports.cshtml
@@ -1,3 +1,6 @@
 ﻿@using UniInfo.Web
 @using UniInfo.Web.Models
+@using Microsoft.AspNetCore.Mvc.Localization
+@using Microsoft.AspNetCore.Localization
+
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
