tips added,ui changed

--- a/ClientApp/src/app/components/tblBuilder/tableBuilder.component.html
+++ b/ClientApp/src/app/components/tblBuilder/tableBuilder.component.html
@@ -12,8 +12,8 @@
               <th>{{'N'}}</th>
               <th>{{tableHeader.code}}</th>
               <th>{{tableHeader.direction}}</th>
-              <th>{{tableHeader.plan}} (г/к)</th>
-              <th>{{tableHeader.pass}} (г/к)</th>
+              <th>{{tableHeader.plan}}</th>
+              <th>{{tableHeader.pass}}</th>
               <th>{{tableHeader.accept}}</th>
             </tr>
           </thead>
