--- a/ClientApp/src/app/components/singleUniversity/singleUniversity.component.html
+++ b/ClientApp/src/app/components/singleUniversity/singleUniversity.component.html
@@ -47,6 +47,58 @@
   #containerOptions > div {
     margin-right: 20px;
   }
+
+  .arrow-up {
+    width: 0;
+    height: 0;
+    border-left: 7px solid transparent;
+    border-right: 7px solid transparent;
+   
+  }
+
+  .arrow-down {
+    width: 0;
+    height: 0;
+    border-left: 7px solid transparent;
+    border-right: 7px solid transparent;
+  }
+
+  .arrow-position-up {
+    right: 50%;
+    bottom: -5px;
+  }
+
+  .arrow-position-down {
+    right: 50%;
+    bottom: 0;
+    top: 28px;
+  }
+
+
+
+  .arrow-up-grand {
+    border-bottom: 7px solid #00dcff;
+  }
+
+  .arrow-up-contract {
+    border-bottom: 7px solid #33ff00;
+  }
+
+  .arrow-down-grand {
+    border-top: 7px solid #00dcff;
+  }
+
+  .arrow-down-contract {
+    border-top: 7px solid #33ff00;
+  }
+
+  .contract-light {
+    color: #64ec54;
+  }
+
+  .grand-light {
+    color: #0ddede;
+  }
 </style>
 
 <!-- ru -->
@@ -55,8 +107,8 @@
     <div class="img-bg">
 
       <div class="img-content">
-        <section class="img-text-content number">
-          <h3>{{university?.nameRu}}</h3>
+        <section class="img-text-content number yura">
+          <h3 style="line-height:35px;" class="pb-2">{{university?.nameRu}}</h3>
 
           <div class="container">
             <div class="d-flex flex-column">
@@ -101,10 +153,10 @@
         </div>
 
       </div>
-      
+
 
       <div class="container-lang">
-        <div [className]="isThisLanguage(l.code) ? 'btn-parallelogram parallelogram btn btn-info color-black':'item-btn btn-parallelogram parallelogram item-btn-sub'" *ngFor="let l of languages"  (click)="selectLanguage(l)">
+        <div [className]="isThisLanguage(l.code) ? 'btn-parallelogram parallelogram btn btn-info color-black':'item-btn btn-parallelogram parallelogram item-btn-sub'" *ngFor="let l of languages" (click)="selectLanguage(l)">
           {{l.ruVersion}}
         </div>
       </div>
@@ -115,6 +167,7 @@
         </div>
       </div>
 
+     
 
     </div>
     <div id="con" class="mt-5" *ngIf="faculties?.length>0;else nofacultyRu">
@@ -125,33 +178,39 @@
               <th>{{'N'}}</th>
               <th>{{tableHeader.code}}</th>
               <th>{{tableHeader.direction}}</th>
-              <th>{{tableHeader.plan}}</th>
-              <th>{{tableHeader.pass}}</th>
+              <th  class="cursor-poiter" (click)="orderByCount()">
+                {{tableHeader.plan}}
+                <span class="{{arrowByCountClass}}"></span>
+              </th>
+              <th class="cursor-poiter" (click)="orderByPoint()">
+                {{tableHeader.pass}}
+                <span class="{{arrowByPointClass}}"></span>
+              </th>
               <th>{{tableHeader.accept}}</th>
             </tr>
           </thead>
           <tbody >
-            <ng-container  *ngFor="let fac of faculties;let i=index">
+            <ng-container *ngFor="let fac of faculties;let i=index">
               <tr>
-                <td  colspan="6" id="subj-td" class="extra-info">Предметы: {{createSubject(fac.subject)}}</td>
+                <td colspan="6" id="subj-td" class="extra-info">Предметы: {{createSubject(fac.subject)}}</td>
               </tr>
               <tr>
                 <td>{{i+1}}</td>
                 <td>{{fac.code}}</td>
-                <td style="text-align:left">{{fac.facultyNameRu}}</td>
+                <td style="text-align:left">{{fac.facultyNameUz}}</td>
                 <td class="number">
-                  <span>
+                  <span [className]="grantCount ? 'grand-light' :''">
                     {{fac.grant}} /
                   </span>
-                  <span>
+                  <span [className]="contractCount ? 'contract-light' :''">
                     {{fac.contract}}
                   </span>
                 </td>
                 <td class="number">
-                  <span>
+                  <span [className]="grantPoint ? 'grand-light' :''">
                     {{fac.grantPass}} /
                   </span>
-                  <span>
+                  <span [className]="contractPoint ? 'contract-light' :''">
                     {{fac.contractPass}}
                   </span>
                 </td>
@@ -177,8 +236,8 @@
     <div class="img-bg">
 
       <div class="img-content">
-        <section class="img-text-content number">
-          <h3>{{university?.nameUz}}</h3>
+        <section class="img-text-content number yura" >
+          <h3 style="line-height:35px;" class="pb-2">{{university?.nameUz}}</h3>
 
           <div class="container">
             <div class="d-flex flex-column">
@@ -247,8 +306,8 @@
               <th>{{'N'}}</th>
               <th>{{tableHeader.code}}</th>
               <th>{{tableHeader.direction}}</th>
-              <th>{{tableHeader.plan}}</th>
-              <th>{{tableHeader.pass}}</th>
+              <th class="cursor-poiter" (click)="orderByCount()">{{tableHeader.plan}}  <span class="{{arrowByCountClass}}"></span></th>
+              <th class="cursor-poiter" (click)="orderByPoint()">{{tableHeader.pass}}  <span class="{{arrowByPointClass}}"></span></th>
               <th>{{tableHeader.accept}}</th>
             </tr>
           </thead>
@@ -262,18 +321,18 @@
                 <td>{{fac.code}}</td>
                 <td style="text-align:left">{{fac.facultyNameUz}}</td>
                 <td class="number">
-                  <span>
+                  <span [className]="grantCount ? 'grand-light' :''">
                     {{fac.grant}} /
                   </span>
-                  <span>
+                  <span [className]="contractCount ? 'contract-light' :''">
                     {{fac.contract}}
                   </span>
                 </td>
                 <td class="number">
-                  <span>
+                  <span [className]="grantPoint ? 'grand-light' :''">
                     {{fac.grantPass}} /
                   </span>
-                  <span>
+                  <span [className]="contractPoint ? 'contract-light' :''">
                     {{fac.contractPass}}
                   </span>
                 </td>
@@ -290,6 +349,7 @@
 
   </div>
 </ng-template>
+
 <ng-template #nofacultyRu>
   <h1 class="mt-4 text-center" style="color:cyan">Данные отсутствуют</h1>
 </ng-template>
